# rust-on-nails

crates/axum-server/: Cargo.toml
crates/axum-server/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
